--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li>Javascript</li>
                 <li>CSS</li>
                 <li>React</li>
-                <li class="project-link" onClick="firstLink()">
+                <li class="project-link" onclick="firstLink()">
                   View Site
                 </li>
               </ul>
@@ -86,7 +86,7 @@
                 <li>Javascript</li>
                 <li>CSS</li>
                 <li>Sass</li>
-                <li class="project-link" onClick="secLink()">
+                <li class="project-link" onclick="secLink()">
                   View Site
                 </li>
               </ul>
@@ -98,12 +98,13 @@
         <div class="contact-title">
           <h1>Contact Me!</h1>
         </div>
-        <form name="contact" method="POST" action="/" data-netlify="true">
+        <form name="contact" action="/thanks" data-netlify="true">
           <p>
             <label for="form-name">Name</label>
             <input
               id="form-name"
               type="text"
+              name="form-name"
               placeholder="Your name..."
               required
             />
@@ -113,6 +114,7 @@
             <input
               id="form-email"
               type="email"
+              name="form-email"
               placeholder="Your email..."
               required
             />
@@ -121,6 +123,7 @@
             <label for="form-message">Message</label>
             <textarea
               id="form-message"
+              name="form-message"
               cols="30"
               placeholder="Your message..."
               rows="10"
