--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="contact-title">
           <h1>Contact Me!</h1>
         </div>
-        <form name="contact" data-netlify="true">
+        <form netlify method="POST" action="thanks.html" name="contact">
           <p>
             <label for="form-name">Name</label>
             <input
