Form should be fixed

--- a/thanks.html
+++ b/thanks.html
@@ -34,7 +34,7 @@
         <h1>Your Submission Has Been Received!</h1>
       </div>
       <div class="back">
-        <input type="button" value="Go back to site" />
+        <button><a href="index.html">Go back to site</a></button>
       </div>
     </section>
   </body>
