Update! Now mobile responsive!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
           <header>
             <h1>Dylan Caldwell</h1>
             <div class="nav">
-              <ul>
+              <div class="navTogOpen">
+                &#9776;
+              </div>
+              <div class="navMenu">
+                <ul class="navMenu-links">
+                  <li>
+                    <a href="#home">Home</a>
+                  </li>
+                  <li>
+                    <a href="#projects">Projects</a>
+                  </li>
+                  <li>
+                    <a href="#contact">Contact Me</a>
+                  </li>
+                </ul>
+              </div>
+              <ul class="nav-links">
                 <li>
                   <a href="#home">Home</a>
                 </li>
@@ -56,11 +72,7 @@
         <div class="projects">
           <div class="project">
             <h1>Random Answer Generater</h1>
-            <img
-              src="images/Project1.PNG"
-              alt="https://www.dcmax1k.tk"
-              width="270px"
-            />
+            <img src="images/Project1.PNG" alt="https://www.dcmax1k.tk" />
             <div class="project-tools">
               <ul>
                 <li>HTML</li>
@@ -75,11 +87,7 @@
           </div>
           <div class="project">
             <h1>Portfolio</h1>
-            <img
-              src="images/Project2.PNG"
-              alt="https://www.dylancaldwell.tk"
-              width="270px"
-            />
+            <img src="images/Project2.PNG" alt="https://www.dylancaldwell.tk" />
             <div class="project-tools">
               <ul>
                 <li>HTML</li>
