--- a/thanks.html
+++ b/thanks.html
@@ -15,7 +15,23 @@
       <header>
         <h1>Dylan Caldwell</h1>
         <div class="nav">
-          <ul>
+          <div class="navTogOpen">
+            &#9776;
+          </div>
+          <div class="navMenu">
+            <ul class="navMenu-links">
+              <li>
+                <a href="index.html#home">Home</a>
+              </li>
+              <li>
+                <a href="index.html#projects">Projects</a>
+              </li>
+              <li>
+                <a href="index.html#contact">Contact Me</a>
+              </li>
+            </ul>
+          </div>
+          <ul class="nav-links">
             <li>
               <a href="index.html#home">Home</a>
             </li>
@@ -37,5 +53,7 @@
         <button><a href="index.html">Go back to site</a></button>
       </div>
     </section>
+
+    <script src="main.js"></script>
   </body>
 </html>
