--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="contact-title">
           <h1>Contact Me!</h1>
         </div>
-        <form action="/thanks.html" name="contact">
+        <form action="/thanks.html" name="contact" netlify>
           <p>
             <label for="form-name">Name</label>
             <input
