Updated Nav Menu

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
               </div>
               <div class="navMenu">
                 <ul class="navMenu-links">
-                  <li>
+                  <li class="navMenu-home">
                     <a href="#home">Home</a>
                   </li>
-                  <li>
+                  <li class="navMenu-projects">
                     <a href="#projects">Projects</a>
                   </li>
-                  <li>
+                  <li class="navMenu-contact">
                     <a href="#contact">Contact Me</a>
                   </li>
                 </ul>
