Added nav toggle animation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
               <div class="navTogOpen">
                 &#9776;
               </div>
+              <div class="navTogClose">
+                X
+              </div>
               <div class="navMenu">
                 <ul class="navMenu-links">
                   <li class="navMenu-home">
