--- a/thanks.html
+++ b/thanks.html
@@ -50,7 +50,9 @@
         <h1>Your Submission Has Been Received!</h1>
       </div>
       <div class="back">
-        <button><a href="index.html">Go back to site</a></button>
+        <button>
+          <a id="backToSite" href="index.html">Go back to site</a>
+        </button>
       </div>
     </section>
 
