--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
           <div class="title-links">
             <ul>
               <li>
-                <a href="#projects">Projects</a>
+                <a id="left-link" href="#projects">Projects</a>
               </li>
               <li>
-                <a href="#contact">Contact Me!</a>
+                <a id="right-link" href="#contact">Contact Me!</a>
               </li>
             </ul>
           </div>
