--- a/thanks.html
+++ b/thanks.html
@@ -18,6 +18,9 @@
           <div class="navTogOpen">
             &#9776;
           </div>
+          <div class="navTogClose">
+            X
+          </div>
           <div class="navMenu">
             <ul class="navMenu-links">
               <li>
@@ -57,5 +60,6 @@
     </section>
 
     <script src="main.js"></script>
+    <script src="thanks.js"></script>
   </body>
 </html>
