--- a/index.html
+++ b/index.html
@@ -147,6 +147,17 @@
           </p>
         </form>
       </section>
+      <footer>
+        <div class="footer">
+          <p>
+            <img
+              src="https://www.dcmax1k.tk/images/dcmax1klogo-round.png"
+              alt="Logo"
+            />
+            Copyright © 2020 Dylan Caldwell
+          </p>
+        </div>
+      </footer>
     </div>
 
     <script src="main.js"></script>
