--- a/index.html
+++ b/index.html
@@ -103,6 +103,21 @@
               </ul>
             </div>
           </div>
+          <div class="project">
+            <h1>Roll the Dice</h1>
+            <img src="images/Project3.PNG" alt="https://www.rolldice.tk" />
+            <div class="project-tools">
+              <ul>
+                <li>HTML</li>
+                <li>Javascript</li>
+                <li>CSS</li>
+                <li>Sass</li>
+                <li class="project-link" onclick="thirdLink()">
+                  View Site
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section id="contact">
