Updated Projects/small touch to style

--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
         </div>
         <div class="projects">
           <div class="project">
+            <h1>Rock, Paper, Scissors</h1>
+            <img
+              src="images/Project4.PNG"
+              alt="https://www.rock-paper-scissors.tk"
+            />
+            <div class="project-tools">
+              <ul>
+                <li>HTML</li>
+                <li>Javascript</li>
+                <li>CSS</li>
+                <li>React</li>
+                <li class="project-link" onclick="fourthLink()">
+                  View Site
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="project">
             <h1>Random Answer Generater</h1>
             <img src="images/Project1.PNG" alt="https://www.dcmax1k.tk" />
             <div class="project-tools">
