--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="contact-title">
           <h1>Contact Me!</h1>
         </div>
-        <form method="POST" netlify name="contact">
+        <form method="POST" netlify action="/thanks" name="contact">
           <p>
             <label for="form-name">Name</label>
             <input
