update to url links

--- a/thanks.html
+++ b/thanks.html
@@ -24,25 +24,25 @@
           <div class="navMenu">
             <ul class="navMenu-links">
               <li>
-                <a href="index.html#home">Home</a>
+                <a href="/#home">Home</a>
               </li>
               <li>
-                <a href="index.html#projects">Projects</a>
+                <a href="/#projects">Projects</a>
               </li>
               <li>
-                <a href="index.html#contact">Contact Me</a>
+                <a href="/#contact">Contact Me</a>
               </li>
             </ul>
           </div>
           <ul class="nav-links">
             <li>
-              <a href="index.html#home">Home</a>
+              <a href="/#home">Home</a>
             </li>
             <li>
-              <a href="index.html#projects">Projects</a>
+              <a href="/#projects">Projects</a>
             </li>
             <li>
-              <a href="index.html#contact">Contact Me</a>
+              <a href="/#contact">Contact Me</a>
             </li>
           </ul>
         </div>
@@ -54,7 +54,7 @@
       </div>
       <div class="back">
         <button>
-          <a id="backToSite" href="index.html">Go back to site</a>
+          <a id="backToSite" href="/">Go back to site</a>
         </button>
       </div>
     </section>
