--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </section>
       <section id="projects">
         <div class="projects-title">
-          <h1>My Projects</h1>
+          <h1>My Best Projects</h1>
         </div>
         <div class="projects">
           <div class="project">
@@ -107,15 +107,18 @@
             </div>
           </div>
           <div class="project">
-            <h1>Roll the Dice</h1>
-            <img src="images/Project3.PNG" alt="https://www.rolldice.tk" />
+            <h1>Magic Calculator</h1>
+            <img
+              src="images/Project5.PNG"
+              alt="https://www.magic-calculator.tk"
+            />
             <div class="project-tools">
               <ul>
                 <li>HTML</li>
                 <li>Javascript</li>
                 <li>CSS</li>
                 <li>Sass</li>
-                <li class="project-link" onclick="thirdLink()">
+                <li class="project-link" onclick="fithLink()">
                   View Site
                 </li>
               </ul>
