--- a/index.html
+++ b/index.html
@@ -130,7 +130,11 @@
         <div class="contact-title">
           <h1>Contact Me!</h1>
         </div>
-        <form action="/thanks.html" name="contact">
+        <form
+          action="https://formspree.io/xaypndve"
+          method="POST"
+          name="contact"
+        >
           <p>
             <label for="form-name">Name</label>
             <input
