--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <li>HTML</li>
                 <li>Javascript</li>
                 <li>CSS</li>
-                <li>React</li>
+                <li>Sass</li>
                 <li class="project-link" onclick="fourthLink()">
                   View Site
                 </li>
@@ -92,15 +92,18 @@
             </div>
           </div>
           <div class="project">
-            <h1>Random Answer Generater</h1>
-            <img src="images/Project1.PNG" alt="https://www.dcmax1k.tk" />
+            <h1>Note Keeper App</h1>
+            <img
+              src="images/Project6.PNG"
+              alt="https://note-keeper-api.herokuapp.com"
+            />
             <div class="project-tools">
               <ul>
-                <li>HTML</li>
-                <li>Javascript</li>
-                <li>CSS</li>
-                <li>React</li>
-                <li class="project-link" onclick="firstLink()">
+                <li>Node.js</li>
+                <li>Express</li>
+                <li>MongoDB</li>
+                <li>EJS</li>
+                <li class="project-link" onclick="sixthLink()">
                   View Site
                 </li>
               </ul>
